# qwen-agent-mcp-demo

./: .env.example  .gitignore  README.md  conda-env.yml  mcp.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_web.py
docs/specs/: 00-index.md  01-conventions.md  02-specification.md  03-design.md  04-tasks.md  05-test-plan.md
scripts/: smoke_test.py
servers/: __init__.py  notes_server.py
src/: config.py  notes_store.py
tests/integration/: test_assistant_setup.py  test_mcp_stdio.py  test_webui_launch.py
tests/unit/: test_config.py  test_notes_server.py  test_notes_tools.py
