[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-mcp-demo"
version = "0.1.0"
description = "Demo: Qwen Agent calling custom tools via MCP"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "qwen-agent[gui,rag,code_interpreter,mcp]>=0.0.26",
    "fastmcp>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
include = ["src*", "servers*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: tests that spawn subprocesses or hit real services",
]

[tool.coverage.run]
source = ["src", "servers", "run_web"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
